--- a/ReadMe.htm
+++ b/ReadMe.htm
@@ -1,9 +1,42 @@
 ﻿<!DOCTYPE html PUBLIC "-//W3C//DTD XHTML 1.0 Transitional//EN" "http://www.w3.org/TR/xhtml1/DTD/xhtml1-transitional.dtd">
-<html xmlns="http://www.w3.org/1999/xhtml" >
+<html xmlns="http://www.w3.org/1999/xhtml">
 <head>
-    <title>Untitled Page</title>
+  <title>Get used to of bundling and minification project</title>
 </head>
 <body>
-
+  <article>
+    <h1>
+      Getting used of bundling and minification project</h1>
+    <section>
+      <h3>
+        Steps to use the project</h3>
+      <p>
+        Here are the steps to use bundling and minification projects</p>
+      <ol>
+        <li>Add reference of BundleAndMinify project</li>
+      </ol>
+    </section>
+    <section>
+    <h3>Exploit this projects</h3>
+    <p>Following are the details about various configuration settings</p>
+    </section>
+    <section>
+      <h3>
+        Something about arrangements of the file (Architecture)</h3>
+    </section>
+    <section>
+      <h3>
+        Goodies you get</h3>
+      <p>
+        Here are the benefits of using the projects
+      </p>
+      <ol>
+        <li>Can be easily integrated with ASP.NET projects (can also be used lower versions
+          of framework)</li>
+        <li>Easy integration with CDN</li>
+        <li>Various modes (debug, release and cdn) can be configured easily</li>
+      </ol>
+    </section>
+  </article>
 </body>
 </html>
