readme conversion link added

--- a/ReadMe.htm
+++ b/ReadMe.htm
@@ -38,5 +38,6 @@
         Something about arrangements of the file (Architecture)</h3>
     </section>
   </article>
+  <!-- readme.md files converted using http://johnmacfarlane.net/pandoc/try/ -->
 </body>
 </html>
